# armadito-mod-python

./: .gitignore  Makefile.am  configure.ac  setup.py
armadito/: module.py
c/: Makefile.am  libpython.c  modpython.c
conf/: Makefile.am  modpython.conf
python/armadito/: modpeepdf.py  test.py
src/: Makefile.am  libpython.c  libpython.h  modpython.c
